# archive-extractor

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
archive_extractor/: __init__.py  core.py
