[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archive-extractor"
version = "0.1.1"
description = "Recursively extract archives"
authors = [
    { name = "Tiago Silva", email = "eng.tiago.silva@gmail.com" }
]
dependencies = [
    "tqdm",
    "py7zr"
]
requires-python = ">=3.12"

[project.scripts]
archive-extractor = "main:main"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
