[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archive-extractor"
version = "0.1.2"
description = "📦 Recursively extract ZIP and 7z archives from directory trees, with password-cracking support"
authors = [
    { name = "Tiago Silva", email = "eng.tiago.silva@gmail.com" }
]
dependencies = [
    "tqdm",
    "py7zr"
]
requires-python = ">=3.12"

[project.scripts]
archive-extractor = "main:main"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
